--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "jsramverk me-api \u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D course me-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha --exit './test/**/*.js'",
     "start": "nodemon app.js",
     "production": "NODE_ENV='production' node app.js"
   },
@@ -20,8 +20,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.0",
     "morgan": "^1.9.1",
     "showdown": "^1.9.0",
     "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "nyc": "^14.1.1"
   }
 }
