--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,5 +6,5 @@ build:
         override:
           - command: npm test
             coverage:
-              file: .coverage/clover.xml
+              file: coverage/clover.xml
               format: clover
